--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
     font-family: 'Russo One', sans-serif;
+    height: 200vh;
 }
 
-h1 {
+h1 , h2 {
     color: #fff;
     text-shadow: 4px 4px black;
     -webkit-text-stroke: 2px black;
@@ -10,6 +11,8 @@ h1 {
     font-family: 'Russo One', sans-serif;
     font-size: 3.3rem;
 }
+
+h1{margin-top: 700px;}
 
 .web {
     border: 2px solid #000;
@@ -35,3 +38,15 @@ h1 {
 .fourth{background-color: #009AD8;}
 
 .fourth a{color: #fff;}
+
+.mail{
+    letter-spacing: 3px;
+    background-color: #FDFA44;
+    color: #492AF9;
+    padding: 0 3px;
+}
+
+.mail:hover{
+    color: #FDFA44;
+    background-color: #492AF9;
+}
